Test/git-issues/git-issue-859b.dfy.expect
git-issue-859b.dfy(29,8): Error: ghost variables are allowed only in specification contexts
git-issue-859b.dfy(29,12): Error: ghost variables are allowed only in specification contexts
git-issue-859b.dfy(35,8): Error: ghost variables are allowed only in specification contexts
git-issue-859b.dfy(35,12): Error: ghost variables are allowed only in specification contexts
4 resolution/type errors detected in git-issue-859b.dfy
